cilium-networking-poc/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-networking-poc
  labels:
    name: cilium-networking-poc
