cilium-networking-poc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: cilium-networking-poc
  labels:
    app: nginx
  # annotations:
  #   lbipam.cilium.io/sharing-cross-namespace: "*"
  #   lbipam.cilium.io/sharing-key: "shared-ingress"
spec:
  type: LoadBalancer
  selector:
    app: nginx
  loadBalancerIP: 192.168.86.200
  externalIPs:
    - 192.168.86.200
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
